[metadata]
name = emsdk
version = 3.1.9
description = Emscripten SDK
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
author = Emscripten authors
url = https://github.com/emscripten-core/emsdk
platforms = Windows, Linux, Mac OS X
keywords = emscripten, sdk

[bdist_wheel]
universal = 1

[options]
include_package_data = True
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    emsdk = emsdkpy.emsdk:main

[options.package_data]
emsdkpy = emsdk, *.txt, *.bat, *.csh, *.fish, *.ps1, *.sh, *.json
